# research

./: README.md  environment.yml  pyproject.toml  requirements.txt
notebooks/: LSTM_generation.ipynb  LSTM_regression.ipynb  actor_critic.ipynb  actor_critic_sequential.ipynb  lstm_generation.ipynb  lstm_regression.ipynb  multi_armed_bandit.ipynb
notebooks/basics/actor-critic/: sequential.ipynb  simple.ipynb
notebooks/basics/multi-armed-bandit/: non-stationary.ipynb
notebooks/basics/sequential/generation/: lstm.ipynb
notebooks/basics/sequential/regression/: regression.ipynb
notebooks/experiments/critic/: online.ipynb  pretrained.ipynb
notebooks/experiments/divergence/: comparison.ipynb  kld.ipynb
notebooks/experiments/reddit/: after.jsonl  before.jsonl  emotions.ipynb  scores.ipynb  sentiment.ipynb  topics.ipynb
notebooks/experiments/reward-normalization/: comparison.ipynb  normalization.ipynb
notebooks/experiments/sentiment/: metrics.csv  metrics.ipynb
notebooks/experiments/twitter/: after.jsonl  emotions.ipynb  scores.ipynb  sentiment.ipynb  topics.ipynb
